--- a/deados/templates/base.html
+++ b/deados/templates/base.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<link href='http://fonts.googleapis.com/css?family=Felipa|Underdog|Metal+Mania|Prosto+One|Share+Tech+Mono&subset=latin,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Rationale|Share+Tech+Mono|Bubbler+One|Radley' rel='stylesheet' type='text/css'>
 	<title>Deados {% block titulo %}{% endblock titulo %}</title>
 	<meta name="description" content="Plataforma académica, búsqueda de parciales, ayuda didáctica.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -77,7 +79,7 @@
 				<ul>
 					{% if user.is_authenticated %}
 						<li><a href="/home">Inicio</a></li>
-						<li><a href="/preguntas/teoricas/">Preguntas Teoricas</a></li>
+						<li><a href="/preguntas/teoricas/page/1/">Preguntas Teoricas</a></li>
 						<li><a href="#">Preguntas Agilidad Mental</a></li>
 						<li><a href="/logout">Cerrar Sesion</a></li>
 					{% else %}
