--- a/deados/templates/edit_unica_respuesta.html
+++ b/deados/templates/edit_unica_respuesta.html
@@ -14,28 +14,43 @@ Editar respuestas tipo Respuesta Única
 		<h5>respuesta 1:</h5>
 		<input type="hidden" name="id1" value="{{respuesta1.id}}" required>
 		<textarea name="respuesta1" onKeyDown="textCounter(this.form.respuesta1,this.form.remLen1,40);" onKeyUp="textCounter(this.form.respuesta1,this.form.remLen1,40);" required />{{respuesta1.contenido}}</textarea>
+		{% if respuesta1.determinacion == True%}
+			<input type="radio" name="unica" value="1" checked /> es correcta?
+		{% else %}
+			<input type="radio" name="unica" value="1"> es correcta?
+		{% endif %}
 		<br>
 		<input readonly class="count" type=text name="remLen1" size=3 maxlength=3 value="40" style="width:12px;height:10px;font-size:0.8em">
 		<h5>respuesta 2:</h5>
 		<input type="hidden" name="id2" value="{{respuesta2.id}}" required>
 		<textarea name="respuesta2" onKeyDown="textCounter(this.form.respuesta2,this.form.remLen2,40);" onKeyUp="textCounter(this.form.respuesta2,this.form.remLen2,40);" required />{{respuesta2.contenido}}</textarea>
+		{% if respuesta2.determinacion == True%}
+			<input type="radio" name="unica" value="2" checked /> es correcta?
+		{% else %}
+			<input type="radio" name="unica" value="2"> es correcta?
+		{% endif %}
 		<br>
 		<input readonly class="count" type=text name="remLen2" size=3 maxlength=3 value="40" style="width:12px;height:10px;font-size:0.8em">
 		<h5>respuesta 3:</h5>
 		<input type="hidden" name="id3" value="{{respuesta3.id}}" required>
 		<textarea name="respuesta3" nKeyDown="textCounter(this.form.respuesta3,this.form.remLen3,40);" onKeyUp="textCounter(this.form.respuesta3,this.form.remLen3,40);" required />{{respuesta3.contenido}}</textarea>
+		{% if respuesta3.determinacion == True%}
+			<input type="radio" name="unica" value="3" checked /> es correcta?
+		{% else %}
+			<input type="radio" name="unica" value="3"> es correcta?
+		{% endif %}
 		<br>
 		<input readonly class="count" type=text name="remLen3" size=3 maxlength=3 value="40" style="width:12px;height:10px;font-size:0.8em">
 		<h5>respuesta 4:</h5>
 		<input type="hidden" name="id4" value="{{respuesta4.id}}" required>
 		<textarea name="respuesta4" onKeyDown="textCounter(this.form.respuesta4,this.form.remLen4,40);" onKeyUp="textCounter(this.form.respuesta4,this.form.remLen4,40);" required />{{respuesta4.contenido}}</textarea>
+		{% if respuesta4.determinacion == True%}
+			<input type="radio" name="unica" value="4" checked /> es correcta?
+		{% else %}
+			<input type="radio" name="unica" value="4"> es correcta?
+		{% endif %}
 		<br>
 		<input readonly type=text class="count" name="remLen4" size=3 maxlength=3 value="40" style="width:12px;height:10px;font-size:0.8em">
-		<h4>Elige la Respuesta Correcta:</h4>
-		<input type="radio" name="unica" value="1" checked />
-		<input type="radio" name="unica" value="2">
-		<input type="radio" name="unica" value="3">
-		<input type="radio" name="unica" value="4">
 		<br>
 		<input type="submit" value="Guardar">
 	{% else %}
