--- a/deados/templates/pregunta_booleana.html
+++ b/deados/templates/pregunta_booleana.html
@@ -5,16 +5,20 @@ Agregar Pregunta Booleana
 {% block contenido %}
 <form method="POST" action=".">
 	{% csrf_token %}
-	<h4>Seleccione el Grado de la pregunta tipo verdadero o falso:</h4>
-	<br>
-	<select name="grado" value="grado">
-		<option value="1">Primaria</option>
-		<option value="2">Sexto y Séptimo</option>
-		<option value="3">Octavo y Noveno</option>
-	</select>
-	<br>
-	<h4>Ingrese la pregunta:</h4>
-	<textarea name="pregunta" required onKeyDown="textCounter(this.form.pregunta,this.form.remLen,60);" onKeyUp="textCounter(this.form.pregunta,this.form.remLen,60);" /></textarea>
+	<div class="titulo-pregunta">
+		<h4>Seleccione el Grado de la pregunta tipo verdadero o falso:</h4>
+	</div>
+	<div class="select-question">
+		<select name="grado" value="grado">
+			<option value="1">Primaria</option>
+			<option value="2">Sexto y Séptimo</option>
+			<option value="3">Octavo y Noveno</option>
+		</select>
+	</div>
+	<div class="titulo-pregunta">
+		<h4>Ingrese la pregunta:</h4>
+	</div>
+	<textarea name="pregunta" class="text-question" onKeyDown="textCounter(this.form.pregunta,this.form.remLen,60);" onKeyUp="textCounter(this.form.pregunta,this.form.remLen,60);" required/></textarea>
 	<br>
 	<input readonly type=text class="count" name=remLen size=3 maxlength=3 value="60" style="width:12px;height:10px;font-size:0.8em">
 	<br>
