--- a/deados/templates/base.html
+++ b/deados/templates/base.html
@@ -11,9 +11,12 @@
 	<link rel="stylesheet" href="/media/css/style.css" />
 	<link rel="stylesheet" href="/media/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" href="/media/bootstrap/css/bootstrap-responsive.css">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="/media/js/jquery.js"></script>
 	<script src="/media/bootstrap/js/bootstrap.js"></script>
-	<script type="text/javascript">
+	<script src="/media/js/canvas-image.js">
+	</script>
+	<script>
 		function textCounter(field, countfield, maxlimit) {
 			if (field.value.length > maxlimit)
 				field.value = field.value.substring(0, maxlimit);
@@ -54,20 +57,6 @@
 			return estaTodoOK;
 		}
 	</script>
-	<script type="text/javascript">
-		$(document).on('ready',function(){
-			$.ajax({
-				type:"GET",
-				contentType:"application/json; charset=utf-8",
-				dateType:"json",
-				url:"/ws/preguntas/",
-				success:function(response){
-					consola.log(response);
-					}
-				}
-			});
-		});
-	</script>
 
 	{% block css 	 %}		{% endblock css 	%}
 	{% block scripts %} 	{% endblock scripts %}
@@ -78,10 +67,10 @@
 			<nav>
 				<ul>
 					{% if user.is_authenticated %}
-						<li><a href="/home">Inicio</a></li>
+						<li><a href="/home/">Inicio</a></li>
 						<li><a href="/preguntas/teoricas/page/1/">Preguntas Teoricas</a></li>
 						<li><a href="#">Preguntas Agilidad Mental</a></li>
-						<li><a href="/logout">Cerrar Sesion</a></li>
+						<li><a href="/logout/">Cerrar Sesion</a></li>
 					{% else %}
 						<h1>Bienvenido a la aplicacion DeA2</h1>
 					{% endif %}
